--- a/BlogPhone/wwwroot/css/login.css
+++ b/BlogPhone/wwwroot/css/login.css
@@ -13,7 +13,7 @@
   height: 691px;
   object-position: 0% 50%;
   background-position: 50% 50%;
-  background-image: url("images/dfdf.jpg");
+  background-image: none;
   margin: -494px 45px 0 auto;
 }
 
