--- a/BlogPhone/Pages/Index.cshtml
+++ b/BlogPhone/Pages/Index.cshtml
@@ -3,9 +3,6 @@
 @{
     Layout = null;
 }
-@using BlogPhone.Models
-@using static BlogPhone.Models.ArticleBlog
-@using Microsoft.EntityFrameworkCore;
 
 <!DOCTYPE html>
 <html style="font-size: 16px;">
@@ -37,7 +34,7 @@
   <body class="u-body u-xl-mode">
       <header class="u-clearfix u-header u-header" id="sec-3687"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a asp-page="/index" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
-          <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
+          <img src="~/images/default-logo.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
@@ -113,7 +110,17 @@ else
             <div class="u-blog-post u-container-style u-repeater-item">
                 <div class="u-container-layout u-similar-container u-valign-bottom-xs u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-1">
                     <a class="u-post-header-link" asp-page="/articles/view" asp-route-id="@articleblog.Id"><!--blog_post_image-->
-                        <img src="@ImageWorking.GetImageURLFromBytesArray(articleblog.ImageData)" alt="blog's picture" class="u-blog-control u-image u-image-default u-image-1"><!--/blog_post_image-->
+                        
+                        <!--/blog_post_image-->
+                        @if(articleblog.ImageData is null)
+                        {
+                            <img src="~/images/default-thumbnail.jpg" alt="blog's picture" class="u-blog-control u-image u-image-default u-image-1" />
+                        }
+                        else
+                        {
+                            <img src="@ImageWorking.GetImageURLFromBytesArray(articleblog.ImageData)" alt="blog's picture" class="u-blog-control u-image u-image-default u-image-1">  
+                        }
+
                     </a>
 
                     <!--blog_post_header-->
