--- a/BlogPhone/Pages/Office/User.cshtml
+++ b/BlogPhone/Pages/Office/User.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model BlogPhone.Pages.Office.UserModel
 @{
-    Layout = null;
+
 }
 
 <div style="text-align:center; margin-top:70px">
@@ -9,16 +9,15 @@
     <h3 style="text-align:center">Имя: @Model.SiteUser!.Name</h3>
     <h3 style="text-align:center; color:limegreen">Счёт: @Model.SiteUser!.Money рублей</h3>
     <h3 style="text-align:center; color:gray">Статус: @Model.SiteUser!.Role
-    @if(@Model.SiteUser!.Role != "user")
+    @if(Model.SiteUser!.Role != "user" && Model.SiteUser.RoleValidityMs is not null)
     {
-        DateTime dt = DateTime.Parse(Model.SiteUser.RoleValidityDate!);
-        <text> (до: @dt.ToLocalTime())</text>
+            DateTimeOffset dt = DateTimeOffset.FromUnixTimeMilliseconds((long)Model.SiteUser.RoleValidityMs);
+            <text> (до: @dt.ToLocalTime())</text>
     }
     </h3>
     <h3 style="text-align:center">Почта: @Model.SiteUser!.Email</h3>
     <h3 style="text-align:center">Пароль: @Model.SiteUser!.Password</h3>
 
-    <a type="submit" style="margin-top:20px" asp-page="/index">На главную</a>
     @if(@Model.SiteUser!.Role == "moder" || @Model.SiteUser!.Role == "admin")
     {
         <p>
