--- a/BlogPhone/Pages/admin/userBan.cshtml
+++ b/BlogPhone/Pages/admin/userBan.cshtml
@@ -18,7 +18,7 @@
     <br />
 
     <label>Unban Date</label>
-    <input type="date" style="margin:5px" name="banDate" required />
+    <input type="date" style="margin:5px" name="BanDate" required />
     <br />
 
     <button type="submit">Установить блокировку</button>
