--- a/BlogPhone/Pages/Admin/Panel.cshtml
+++ b/BlogPhone/Pages/Admin/Panel.cshtml
@@ -106,7 +106,7 @@
                 </a>
               </div>
             </div>
-            @if(Model.SiteUser.Role == "admin")
+            @if(Model.SiteUser!.FullDostup)
             {
             <div class="u-border-2 u-border-grey-75 u-container-style u-list-item u-radius-6 u-repeater-item u-shape-round">
                 <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-3">
