--- a/BlogPhone/Pages/Office/User.cshtml
+++ b/BlogPhone/Pages/Office/User.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model BlogPhone.Pages.Office.UserModel
 @{
-
+    ViewData["Panel"] = false; // to switch off "Панель" button in Shared/Layout
 }
 
 <div style="text-align:center; margin-top:70px">
