--- a/BlogPhone/Pages/admin/userChange.cshtml
+++ b/BlogPhone/Pages/admin/userChange.cshtml
@@ -25,7 +25,7 @@
     <br />
 
     <label>Money</label>
-    <input type="number" style="margin:5px" required name="money" value="@Model.ChangeUser!.Money" />
+    <input type="text" style="margin:5px" required name="money" value="@Model.ChangeUser!.Money" />
     <br />
 
     <label>Add Role Days</label>
