--- a/BlogPhone/Pages/admin/aboutUsChange.cshtml
+++ b/BlogPhone/Pages/admin/aboutUsChange.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model BlogPhone.Pages.admin.aboutUsChangeModel
 @{
+    ViewData["Title"] = "Изменить 'О нас'";
 }
 
 <form method="post" asp-antiforgery="true" enctype="multipart/form-data">
