--- a/BlogPhone/Pages/articles/view.cshtml
+++ b/BlogPhone/Pages/articles/view.cshtml
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Заголовок 1-го поста">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Заголовок 2-го поста</title>
+    <title>@Model.Article!.Label</title>
     <link rel="stylesheet" href="~/css//nicepage.css" media="screen">
 <link rel="stylesheet" href="~/css/Post-Template.css" media="screen">
     <script class="u-script" type="text/javascript" src="~/js/jquery.js" defer=""></script>
