--- a/BlogPhone/Pages/office/user.cshtml
+++ b/BlogPhone/Pages/office/user.cshtml
@@ -28,7 +28,7 @@
             }
             else
             {
-                <span style="color:orangered" for="code">Пригласите друга и получите 250 рублей на баланс!</span>
+                <span style="color:orangered" for="code">Пригласите друга и получите @Referral.USER_MONEY_BONUS рублей на баланс!</span>
                 <button type="submit">Сгенерировать реферальную ссылку</button>
             }
         </form>
