Referal Final Works

--- a/BlogPhone/Pages/Admin/Panel.cshtml
+++ b/BlogPhone/Pages/Admin/Panel.cshtml
@@ -101,7 +101,7 @@
             <div class="u-border-2 u-border-grey-75 u-container-style u-list-item u-radius-6 u-repeater-item u-shape-round">
               <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-3">
                 <a class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-btn u-button-style u-custom-item u-none u-text-palette-1-base u-btn-3" asp-page="/admin/aboutUsChange">
-                    <span style="color:orange">(NEW!)</span> Изменить "О нас"
+                    <span style="color:coral">(NEW!)</span> Изменить "О нас"
                     <br>
                 </a>
               </div>
@@ -110,8 +110,8 @@
             {
             <div class="u-border-2 u-border-grey-75 u-container-style u-list-item u-radius-6 u-repeater-item u-shape-round">
                 <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-3">
-                    <a class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-btn u-button-style u-custom-item u-none u-text-palette-1-base u-btn-3" asp-page="/admin/VRC">
-                        <span style="color:red">(PRIVATE!)</span> Проверка VRC
+                    <a class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-btn u-button-style u-custom-item u-none u-text-palette-1-base u-btn-3" asp-page="/admin/referrals">
+                        <span style="color:gold">(FD)</span> Рефералки
                         <br>
                     </a>
                 </div>
