--- a/BlogPhone/Pages/admin/users.cshtml
+++ b/BlogPhone/Pages/admin/users.cshtml
@@ -98,7 +98,7 @@
                         @if (!AccessChecker.BanCheck(user.BanMs) && user.BanMs is not null)
                         {
                                 DateTimeOffset dt = DateTimeOffset.FromUnixTimeMilliseconds((long)user.BanMs).ToLocalTime();
-                                <small style="font-size:12px; color:red">(блокировка до @dt.ToString("g"))</small>
+                                <small style="font-size:12px; color:red">(блокировка до @dt.ToString("d"))</small>
                         }
                     </h3><br />
                 }
